Reorg to top-level layout; strip main to pure-Aether reality
The Aether port lived under aether/ (engine at aether/core, 18 bindings at
aether/<lang>). Promote it to the repo top level and reserve aether/ for the
Aether-LANGUAGE client binding:

  aether/core       -> selenium_core/          (the shared linkable engine)
  aether/core_tests -> selenium_core/tests/     (the pure-Aether probe)
  aether/<lang>     -> <lang>/                   (18 bindings at top level)
  aether/.presubmit.ae -> .presubmit.ae
  aether/.gitignore -> merged into root .gitignore

aeb is now invoked from the repo root; the tree root is the repo root, so each
binding's ${root}/<lang> self-reference is already correct. Only the engine
references needed rewriting: "core/.build.ae" -> "selenium_core/.build.ae",
core_tests -> selenium_core/tests, and the runtime .so paths baked into the FFI
bindings (../core/native -> ../selenium_core/native in go/nim/php/ruby/rust/zig
and the probe's --lib core -> --lib selenium_core).

Per "pure-Aether reality on main": all classic Selenium code and its
Bazel/Rake/pnpm/node tooling are removed here (java/ py/ rb/ javascript/ dotnet/
rust/ common/ cpp/ docs/ rake_tasks/ scripts/ third_party/, Rakefile,
MODULE.bazel, WORKSPACE, *.bazel, go/go.bat, package.json, pnpm-*, ...). All of
it remains on the classic-selenium branch for reference; we recreate what we
need in aether/aeb (shelling out where needed) over time.

The classic root README is replaced by the Aether port's README (paths updated
to the new layout); aether/README.md becomes a stub describing the reserved
Aether-language client.

Verified: `aeb .presubmit.ae` from the repo root is green — engine probe + all
18 bindings resolve the engine at selenium_core/ and pass (the toolchain-present
ones execute: go, dotnet, clojure, rust, java, erlang, gleam, elixir,
javascript; the rest self-skip as before).

Follow-up (not in this commit): the 34 classic Bazel/RBE workflows under
.github/workflows/ are now dead